--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
 
             <div class="class container-fluid row " style="background-color: rgb(243, 243, 243); height: 100vh;" >
-                <video width="100vw" height="auto" loop autoplay style="padding: 0; margin-left: 1vh; padding-top: 10vh;" id="home">
+                <video width="100vw" height="auto" loop style="padding: 0; margin-left: 1vh; padding-top: 10vh;" id="home">
                     <source src="./STG_flash.mp4" type="video/mp4">
                 </video>
             </div>
