--- a/index.html
+++ b/index.html
@@ -75,27 +75,17 @@
         <div class="class container-fluid col p-0" >
             <div class="class container-fluid row" style="background-color: white; height: 10vh;position: fixed ;">
                 
-                <div class="class container col-3">
+                <div class="class container col-4">
                     <center><a href="#home" class="navMenu" style="margin-top: 3vh; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: larger; display: inline-block;">Home</a></center>
                 </div>
-                <div class="class container col-3">
-                    <center><a href="#about" class="navMenu" style="margin-top: 3vh; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: larger; display: inline-block;">About</a></center>
-                </div>
-                <div class="class container col-3">
+                <div class="class container col-4">
                     <center><a href="#work" class="navMenu" style="margin-top: 3vh;font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: larger; display: inline-block;">Work</a></center>
                 </div>
-                <div class="class container col-3">
+                <div class="class container col-4">
                     <center><a href="#cont" class="navMenu" style="margin-top: 3vh;font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: larger; display: inline-block;">Contact</a></center>
                 </div>
             </div>
-
-            <div class="class container-fluid row " style="background-color: rgb(243, 243, 243); height: 100vh;" >
-                <video width="100vw" height="auto" loop style="padding: 0; margin-left: 1vh; padding-top: 10vh;" id="home">
-                    <source src="./STG_flash.mp4" type="video/mp4">
-                </video>
-            </div>
-            
-            <div class="class container-fluid row " style="background-color: rgb(243, 243, 243); height: 120vh;" id="about">
+            <div class="class container-fluid row " style="background-color: rgb(243, 243, 243); height: 120vh;" id="home">
                 <h6></h6>
                 <img src="./hithere.png" alt="">
             </div>
